--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   <body>
     <header id="header" class="header">
       <div class="wrapper">
-        <img
-          src="images/logo-bookmark.svg"
+        <object
+          data="images/logo-bookmark.svg"
           class="header__logo"
           alt="Logo Bookmark"
-        />
+          type="image/svg+xml"
+        ></object>
 
         <nav class="header__navigation">
           <ul>
